# zopfli

./: CMakeLists.txt
CMakeModules/: Cpp11.cmake  NinjaColorFix.cmake
lib/: blocksplitter.h  deflate.h  gzip_container.h  lz77.h  util.c  zlib_container.h  zopfli_lib.c
